2011-12-22 Sancho Lerena <slerena@artica.es>

	* pandoradb_migrate_4.0.x_to_4.1.mysql.sql: Added migration 
	script for 4.1 version. Added netflow tables.

2011-12-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/search_alerts.php: Added semicolon at end of a line.
	
	Fixes: #3453610

2011-12-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Fixed Date formats in graph
	axis to avoid loss data
	
	* include/functions_custom_graphs.php: Fixed number of hours of
	a week in the graphs combo

2011-12-21  Vanessa Gil  <vanessa.gil@artica.es>
	* operation/netflow/nf_view.php
	  godmode/netflow/nf_report_item.php
	  godmode/netflow/nf_report.php: Allow repeat filters
	  in reports.

2011-12-21  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/netflow/nf_edit.php
	  godmode/netflow/nf_edit_form.php
	  include/functions_graph.php
	  operation/netflow/nf_view.php: remove some warning. 

2011-12-21  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.sql: added mysql tables for traffic netflow.

2011-12-21  Vanessa Gil  <vanessa.gil@artica.es>
	* include/functions_netflow.php
	  include/help/en/help_aggregate_by.php: added files to netflow
	traffic monitoring.

2011-12-21  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_config.php
	  include/functions_graph.php
	  include/styles/menu.css
	  pandoradb.data.oracle.sql
	  pandoradb.data.postgreSQL.sql
  	  pandoradb.data.sql: Netflow traffic monitoring.


2011-12-21  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/menu.php
	  godmode/setup/setup.php
	  include/functions_config.php
	  include/functions_graph.php
	  include/styles/menu.css
 	  operation/menu.php
	  pandoradb.data.oracle.sql
	  pandoradb.data.postgreSQL.sql
  	  pandoradb.data.sql
	  added files:
	  operation/netflow/nf_reporting.php
	  operation/netflow/nf_view.php
	  godmode/netflow/nf_edit.php
	  godmode/netflow/nf_edit_form.php
	  godmode/netflow/nf_report.php
	  godmode/netflow/nf_report_form.php